@@ -169,6 +169,16 @@ def CATEGORIES():
         'genre': 'Technology'
     }
 
+    # Linux Unplugged
+    shows[__language__(30019)] = {
+        'feed': 'http://feeds.feedburner.com/linuxunvid?format=xml',
+        'feed-low': 'http://feeds.feedburner.com/linuxunogg?format=xml',
+        'feed-audio': 'http://feeds.feedburner.com/linuxunogg?format=xml',
+        'image': 'http://www.jupiterbroadcasting.com/images/LASUN-Badge1400.jpg',
+        'plot': __language__(30219),
+        'genre': 'Technology'
+    }
+
     # Jupiter Broadcasting Live via the HLS/RTMP stream
     liveUrl = 'http://videocdn-us.geocdn.scaleengine.net/jblive-iphone/live/jblive.stream/playlist.m3u8'
     if (quality == 1):
