@@ -52,6 +52,9 @@
   <string id="30018">Plan B</string>
   <string id="30218">Weekly talk show contemplating the future and present of Bitcoin. With insights for the novice, shop talk for the expert, and opinionated discussion for the interested observer of bitcoin and related technologies.</string>
 
+  <string id="30019">Linux Unplugged</string>
+  <string id="30219">Cleans up after the sloppy seconds of the Linux Action Show.</string>
+
   <!-- Settings -->
   <string id="30100">General</string>
   <string id="30101">Quality</string>
